--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "description": "",
   "dependencies": {
     "@freeconvert/freeconvert-node": "^0.1.23",
-    "cors": "^2.8.5",
     "axios": "^1.7.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
